--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,8 +65,14 @@
             android:value="@string/google_maps_key" />
 
         <activity
-            android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" >
+            android:name=".TripActivity"
+            android:label="@string/title_activity_trip"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
+        <activity
+            android:name=".PoiActivity"
+            android:label="@string/title_activity_poi"
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
     </application>
 
