--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
         <activity
             android:name=".TripStartActivity"
             android:label="@string/name_activity_trip_start"
-            android:parentActivityName=".MainActivity"
+            android:parentActivityName=".TripListActivity"
             android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -67,6 +67,7 @@
         <activity
             android:name=".TripActivity"
             android:label="@string/name_activity_trip"
+            android:parentActivityName=".TripListActivity"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
         <activity
