--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,6 @@
 
 
     <application
-        android:name="MyGipfl"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -51,13 +50,22 @@
                 android:value="com.gipflstuermer.gipfl.MainActivity" />
         </activity>
         <activity
+            android:name=".PoiListActivity"
+            android:label="@string/name_activity_poi_list"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.gipflstuermer.gipfl.MainActivity" />
+        </activity>
+        <activity
             android:name=".TripStartActivity"
             android:label="@string/name_activity_trip_start"
             android:parentActivityName=".TripListActivity"
             android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.gipflstuermer.gipfl.MainActivity" />
+                android:value="com.gipflstuermer.gipfl.TripListActivity" />
         </activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
